# freedive-gym

./: CLAUDE.md  index.html  manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
