[package]
name = "freedive-gym"
version = "1.0.0"
description = "O2 & CO2 apnea tables, static apnea timer, and breathing exercises"
authors = ["Michele Butturini"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
